# peril-app-server

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  crow-v0.3+4.deb  main.cpp  peril-app-server  setup.sh
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/crow/: CMakeLists.txt  Makefile  cmake_install.cmake  http_server.h  socket_adaptors.h
src/: CMakeCache.txt  CMakeLists.txt  Main.cpp  build.sh  main.cpp  test.sh
src/sql/: initializeTable.sql
